# totalspineseg

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
generate-labels-guides/: generate_sacrum_masks.md
mri_to_ct_model/: dataset.py  diffusion.py  model.py  preprocess_datasets.py  test.py  train.py
preprocessing/: process_spine_generic.sh
reg2pam50/: TotalSegMRI_nnUNet_TEST.sh  TotalSegMRI_nnUNet_TEST_206_210_FINAL.sh  TotalSegMRI_nnUNet_TRAINING.sh  add_color_table_to_3d_slicer.py  fix_csf_label.py  generate_augmentations.py  generate_labels_sequential.py  generate_random_disc_labels.py  generate_random_disc_labels_channels.py  generate_seg_jpg.py  generate_seg_jpg_nnunet.py  get-spine-generic-data.sh  make_nnunet_dataset.py  put_in_background.py  reg2pam50.sh  remove_warp_outliers.py  seg_manual_fix_3d_slicer.py
resources/: classes.json  labels.json  nnunet_labels_map.json
resources/datasets/: dataset_206.json  dataset_210.json
resources/labels_maps/: mrspineseg.json
run/: README.md  gen_sacrum_seg_BIDS_from_config.sh  get_spine_generic_datasets.sh  inference_nnunet.sh  prepare_bids_datasets.sh  prepare_nnunet_datasets.sh  prepare_spider_bids_datasets.sh  reg2pam50.sh  train_nnunet.sh
scripts/: README.md  add_mask_to_seg.py  add_nnunet_trainer.sh  build_intensity_stats.py  combine_masks.py  convert_BIDS_config_to_nnunet_format.py  create_jsonsidecar.py  download_datasets.sh  extract_signal_statistics.py  generate_image.py  generate_sacrum_seg_BIDS_from_config.sh  generate_sacrum_seg_from_nnunet_training.sh  generate_seg_jpg.py  get_datasets.sh  image.py  inference.sh  inference_nnunet.sh  init_data_config.py  keep_largest_component.py  map_labels.py  mha2nii.py  prepare_datasets.sh  prepare_nnunet_datasets.sh  prepare_spider_bids_datasets.sh  reg2pam50.sh  register_CT_masks_to_MR.py  register_CT_seg_to_MR.py  run_inference_single_subject.py  train.sh  train_nnunet.sh  utils.py
scripts/active_learning/: README.md  refine_bids.sh  run_nninteractive.py  spineps_refine.py
scripts/generate_sacrum_masks/: README.md  generate_sacrum.sh
scripts/slurm/: train_job.sh
src/totalsegmri/data_management/: init_data_config.py  utils.py
src/totalsegmri/resources/configs/: add_sacrum.json
src/totalsegmri/resources/datasets/: README.md  dataset_full.json  dataset_step1.json  dataset_step2.json
src/totalsegmri/resources/labels_maps/: README.md  nnunet_206.json  nnunet_206_canal.json  nnunet_210.json  nnunet_210_0001.json  nnunet_step2.json
src/totalsegmri/utils/: convert_BIDS_config_to_nnunet_format.py  cpdir.py  dirpath.py  fix_csf_label.py  generate_augmentations.py  generate_croped_images.py  generate_labels_sequential.py  generate_laplace_images.py  generate_largest_labels.py  generate_resampled_images.py  generate_seg_jpg.py  map_labels.py  mha2nii.py  register_CT_seg_to_MR.py  run_nnunet_inference_single_subject.py  transform_labels2images.py  transform_norm.py  transform_s2qform.py
test/: script1.sh  script2.sh  script3.sh  script4.sh
totalspineseg/: __init__.py  inference.py  inference_on_crop.py  init_inference.py
totalspineseg/data_management/: convert_config_to_nnunet.py  init_data_config.py
totalspineseg/models/: transforms_gpu.json
totalspineseg/resources/data/: retrain_tss.json  training_data.json
totalspineseg/resources/datasets/: README.md  dataset_full.json  dataset_step1.json  dataset_step2.json
totalspineseg/resources/labels_maps/: README.md  levels_maps.json  nnunet_full.json  nnunet_step1.json  nnunet_step2.json  nnunet_step2_input_o2e.json  nnunet_step2_o2e.json  spider.json  tss_map.json
totalspineseg/trainer/: nnUNetTrainerDA5Custom.py  nnUNetTrainerDAExt.py
totalspineseg/trainer/transforms/: transforms.py
totalspineseg/utils/: __init__.py  abs_laplace.py  add_nnunet_trainer.py  augment.py  average4d.py  cpdir.py  create_json_sidecar.py  crop_image2seg.py  crop_images2labels.py  download_weights_nnunet.py  extract_alternate.py  extract_levels.py  extract_soft.py  extract_vertebrae.py  fill_canal.py  filter_bad_sacrum.py  fix_csf_label.py  generate_augmentations.py  generate_averaged4d.py  generate_croped_images.py  generate_laplace_images.py  generate_largest_labels.py  generate_reports.py  image.py  install_weight.py  install_weights.py  iterative_label.py  laplace.py  largest_component.py  largest_component_filewise.py  largest_labels.py  map_labels.py  measure_seg.py  mha2nii.py  predict_nnunet.py  preview_jpg.py  register_CT_to_MR.py  reorient_canonical.py  reorient_images.py  resample.py  (+5 more)
utils/: fix_csf_label.py  generate_augmentations.py  generate_labels_sequential.py  generate_seg_jpg.py  map_labels.py  mha2nii.py
