[project]
name = "totalspineseg"
version = "20251021"
requires-python = ">=3.10"
description = "TotalSpineSeg is a tool for automatic instance segmentation and labeling of all vertebrae, intervertebral discs (IVDs), spinal cord, and spinal canal in MRI images."
readme = "README.md"
authors = [
    { name = "Yehuda Warszawer", email = "yehuda.warszawer@sheba.health.gov.il"},
    { name = "Nathan Molinier", email = "nathan.molinier@polymtl.ca"},
    { name = "Anat Achiron"},
    { name = "Julien Cohen-Adad"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'nnU-Net',
    'nnunet',
    'mri',
    'spine',
    'ivd',
    'intervertebral disc',
    'spinal cord',
]
dependencies = [
    "tqdm",
    "numpy<2",
    "nibabel",
    "gryds",
    "torchio",
    "scipy",
    "pillow",
    "nilearn",
    "SimpleITK",
    "psutil",
    "blosc2<3.9.0"
]

# Allow users to choose whichever version of `nnunetv2` they prefer
#   - `pip install totalspineseg[nnunetv2]`       (tested, safe versions of `nnunetv2`)
#   - `pip install totalspineseg nnunetv2==2.6.2` (specific version)
#   - `pip install totalspineseg[neuropoly]`      (internal fork of `nnunetv2`)
#
# Note: Some older versions of `nnunetv2` have notable bugs:
#   - nnunetv2==2.5.1 fails with nnUNetTrainer_DASegOrd0_NoMirroring
#     (https://github.com/MIC-DKFZ/nnUNet/issues/2480)  <-- unclear if fixed?
#   - nnunetv2==2.4.2 fails with --verify-dataset-integrity
#     (https://github.com/MIC-DKFZ/nnUNet/issues/2144)  <-- fixed in future versions, but non-fatal
[project.optional-dependencies]
nnunetv2 = ["nnunetv2<=2.4.2"]
neuropoly = ["nnunetv2-neuropoly"]

[project.urls]
homepage = "https://github.com/neuropoly/totalspineseg"
repository = "https://github.com/neuropoly/totalspineseg"
Dataset101_TotalSpineSeg_step1 = "https://github.com/neuropoly/totalspineseg/releases/download/r20241115/Dataset101_TotalSpineSeg_step1_r20241115.zip"
Dataset102_TotalSpineSeg_step2 = "https://github.com/neuropoly/totalspineseg/releases/download/r20241115/Dataset102_TotalSpineSeg_step2_r20241115.zip"

[project.scripts]
totalspineseg = "totalspineseg.inference:main"
totalspineseg_init = "totalspineseg.init_inference:main"
totalspineseg_cpdir = "totalspineseg.utils.cpdir:main"
totalspineseg_fill_canal = "totalspineseg.utils.fill_canal:main"
totalspineseg_augment = "totalspineseg.utils.augment:main"
totalspineseg_iterative_label = "totalspineseg.utils.iterative_label:main"
totalspineseg_largest_component = "totalspineseg.utils.largest_component:main"
totalspineseg_resample = "totalspineseg.utils.resample:main"
totalspineseg_preview_jpg = "totalspineseg.utils.preview_jpg:main"
totalspineseg_map_labels = "totalspineseg.utils.map_labels:main"
totalspineseg_transform_seg2image = "totalspineseg.utils.transform_seg2image:main"
totalspineseg_reorient_canonical = "totalspineseg.utils.reorient_canonical:main"
totalspineseg_average4d = "totalspineseg.utils.average4d:main"
totalspineseg_crop_image2seg = "totalspineseg.utils.crop_image2seg:main"
totalspineseg_extract_soft = "totalspineseg.utils.extract_soft:main"
totalspineseg_extract_levels = "totalspineseg.utils.extract_levels:main"
totalspineseg_extract_alternate = "totalspineseg.utils.extract_alternate:main"
totalspineseg_install_weights = "totalspineseg.utils.install_weights:main"
totalspineseg_predict_nnunet = "totalspineseg.utils.predict_nnunet:main"

[build-system]
requires = ["pip>=23", "setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'totalspineseg' = ['resources/**.json']
